namespace AdaptiveHypertrophy.Domain.Enums;

public enum ExperienceLevel
{
    Beginner,
    Intermediate,
    Advanced
}
