namespace AdaptiveHypertrophy.Domain.Enums;

public enum WorkoutGoal
{
    Hypertrophy,
    Strength,
    GeneralFitness
}
